--- a/package.json
+++ b/package.json
@@ -3,7 +3,13 @@
   "version": "1.0.0",
   "description": "Package to use new type country for Joi and convert to country alpha-2 or alpha-3 iso codes",
   "main": "src/index.js",
-  "keywords": ["joi extension", "joi country", "joi", "country code", "convert country to country code"],
+  "keywords": [
+    "joi extension",
+    "joi country",
+    "joi",
+    "country code",
+    "convert country to country code"
+  ],
   "scripts": {
     "test": "jest --config=jest.config.js"
   },
@@ -17,10 +23,6 @@
     "url": "https://github.com/tatihets/joi-country-extension.git"
   },
   "devDependencies": {
-    "@eslint/js": "^9.17.0",
-    "eslint": "^9.17.0",
-    "eslint-plugin-import": "^2.31.0",
-    "globals": "^15.14.0",
     "jest": "^29.7.0",
     "joi": "^17.13.3"
   }
