--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -1,14 +1,22 @@
 name: CI/CD Pipeline
 
+# Trigger the workflow on push to `dev` for running tests and to `master` for publishing npm package
 on:
   push:
     branches:
-      - master
+      - dev      # Trigger on pushes to dev branch for tests
+      - master   # Trigger on pushes to master branch for publishing npm package
+  pull_request:
+    branches:
+      - master   # Trigger for PRs targeting master branch (if needed)
 
 jobs:
+  # Job to run tests on dev branch
   test:
     runs-on: ubuntu-latest
 
+    if: github.ref == 'refs/heads/dev'  # Ensure this job only runs on push to `dev` branch
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -21,36 +29,14 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run unit tests
+      - name: Run tests
         run: npm test
-        continue-on-error: false
 
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: test
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '22'
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Deploy application
-        run: |
-          echo "Deploying application..."
-          ./deploy.sh  # Replace with your deployment command/script
-
+  # Job to publish npm package on push to master branch
   publish:
     runs-on: ubuntu-latest
-    needs: deploy
-    if: github.ref == 'refs/heads/master'
+    needs: test        # Ensure that the tests pass before publishing
+    if: github.ref == 'refs/heads/master'  # Only run when pushing to master
 
     steps:
       - name: Checkout code
@@ -60,13 +46,16 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '22'
+
       - name: Install dependencies
         run: npm ci
+
+      - name: Set up npm authentication
+        run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}  # Ensure NPM_TOKEN is stored as a secret in GitHub
 
       - name: Publish npm package
         run: |
-          echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
-          npm version patch  # Automatically increment the patch version
+          npm version patch  # Update the version (patch, minor, or major)
           npm publish --access public  # Publish the package to npm
-        env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
