--- a/.github/workflows/npm-publish-ci-cd.yaml
+++ b/.github/workflows/npm-publish-ci-cd.yaml
@@ -36,6 +36,7 @@ jobs:
           node-version: 22
           registry-url: https://registry.npmjs.org/
       - run: npm ci
+      - run: npm version patch
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
